--- a/Bekhteff/src/index.html
+++ b/Bekhteff/src/index.html
@@ -7,7 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
 <body>
+  <app-home-page></app-home-page>
   <app-root></app-root>
+  
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
